# cpp-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  structure.md  vcpkg.json
.github/workflows/: ci.yml
apps/app/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt  bench_hello.cpp
cmake/: ClangFormat.cmake  CompilerWarnings.cmake  ProjectOptions.cmake  ProjectWarnings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
libs/core/: CMakeLists.txt
libs/core/include/core/: hello.hpp
libs/core/src/: hello.cpp
scripts/: build.bat  build.ps1  build.sh  build_all.bat  build_all.sh
tests/: CMakeLists.txt  test_hello.cpp
